# jncep

./: .gitignore  .ruff.toml  README.md  namegen.md  part.html  pyproject.toml  pytest.SAMPLE.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  other-issue.md
.github/workflows/: publish.yml
jncep/: __init__.py  config.py  core.py  core_legacy.py  epub.py  epub_legacy.py  jncalts.py  jncapi.py  jncapi_legacy.py  jncep.py  jnclabs.py  jncweb.py  model.py  namegen.py  namegen_minilang.py  namegen_utils.py  spec.py  track.py  trio_utils.py  update.py  utils.py
jncep/cli/: base.py  config.py  epub.py  get.py  main.py  options.py  track.py  update.py
jncep/res/: style.css
prompts/: pr73_namgegen_py.txt
scripts_build/: publish_release_new.sh  publish_tag_delete.sh  publish_tag_new.sh  update_init_version.sh
tests/: test_cli.py  test_exp.py  test_namegen.py  test_spec.py
