[project]
name = "jncep"
dynamic = ["version"]
description = "Command-line tool to generate EPUB files for J-Novel Club and JNC Nina pre-pub novels"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Guilhem Vellut", email = "guilhem.vellut@gmail.com" }]
keywords = ["epub", "jnc", "jnovel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "addict==2.4.0",
    "atomicwrites==1.4.1",
    "attrs==25.3.0",
    "click==8.1.8",
    "click-option-group==0.5.6",
    "ebooklib==0.19",
    "exceptiongroup==1.3.0",
    "httpx==0.28.1",
    "lark==1.2.2",
    "outcome==1.3.0.post0",
    "python-dateutil==2.9.0.post0",
    "rich==13.9.4",
    "trio==0.30.0",
]

[dependency-groups]
dev = ["coloredlogs>=15.0.1", "pytest~=8.0", "pytest-env~=1.1.0"]

[project.urls]
Homepage = "https://github.com/gvellut/jncep"
Repository = "https://github.com/gvellut/jncep"
Issues = "https://github.com/gvellut/jncep/issues"
Releases = "https://github.com/gvellut/jncep/releases"

[project.scripts]
jncep = "jncep.jncep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["jncep/"]

[tool.hatch.version]
path = "jncep/__init__.py"
